--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ DB_USERNAME=
 DB_PASSWORD=
 DB_DATABASE=
 FE_ORIGIN=http://localhost:3001
+
+SUPABASE_URL=https://aioonehtzuyncggrjqox.supabase.co
+SUPABASE_API_KEY=KEY
+SUPABASE_BUCKET_NAME=nusee_uploads
